--- a/dadi/index.html
+++ b/dadi/index.html
@@ -12,8 +12,7 @@
         <div class="player">
             Il tuo numero: <span id="num-player"></span>
         </div>
-
-
+        <button class="btn">PLAY</button>
         <div class="computer">
             il numero del computer: <span id="num-computer"></span>
         </div>
